# mem0-supabase

./: AI_CONTEXT.md  README.md  RELEASE_NOTES.md  SECURITY.md  SECURITY_COMPLETE.md  VALIDATION_CHECKLIST.md  pyproject.toml  test_output.txt  verify_fixes.py
docs/: README.md  SETUP.md  introduction.mdx  mintlify.json
docs/architecture/: memory_layers.mdx  supabase_innovations.md
docs/components/embedders/: overview.mdx
docs/components/llms/: overview.mdx
docs/components/vectordbs/: overview.mdx
docs/core-concepts/: memory-operations.mdx
docs/open-source/: configuration.mdx  python-quickstart.mdx
docs/open-source/features/: graph-memory.mdx  overview.mdx
examples/simple_chatbot/: README.md  chat.py
mem0/: __init__.py  cache.py  enterprise.py  langgraph_integration.py  lifecycle.py  mcp_server.py  multimodal.py  realtime.py  recollection.py  temporal.py
mem0/configs/: base.py  prompts.py
mem0/configs/rerankers/: base.py
mem0/configs/vector_stores/: supabase.py
mem0/graph_stores/: base.py  supabase.py
mem0/memory/: __init__.py  async_memory.py  base_supabase.py  ego.py  main.py  storage_postgres.py  surprise.py  sync_memory.py  utils.py
mem0/reranker/: configs.py
mem0/utils/: factory.py
mem0/vector_stores/: configs.py  supabase.py
scripts/: setup_wizard.py  supabase_setup.sql
server/: main.py
supabase/functions/mem0-add/: index.ts
supabase/functions/mem0-dream/: index.ts
supabase/migrations/: 002_advanced_features.sql  003_enterprise_and_lifecycle.sql
tests/: test_process_interaction.py  test_recollection_jump.py
(+2 files in other folders)
